# StockAgent

./: .gitignore  README.md  docker-compose.yml
backend/: .bedrock_agentcore.yaml  Dockerfile  main.py  pyproject.toml
backend/agents/: __init__.py  investment_analyst_agent.py  model_loader.py  orchestrator_agent.py  quant_trading_agent.py  runtime_client.py  stock_trading_agent.py
backend/agents/skills/: __init__.py  analysis_skill.py  crawler_skill.py  market_data_skill.py  notification_skill.py  quant_skill.py  trading_skill.py  update_registry.py  web_fetch_skill.py
backend/agents/skills/analysis-skill/: SKILL.md
backend/agents/skills/browser-crawler-skill/: SKILL.md
backend/agents/skills/code-interpreter-skill/: SKILL.md
backend/agents/skills/crawler-skill/: SKILL.md
backend/agents/skills/market-data-skill/: SKILL.md
backend/agents/skills/notification-skill/: SKILL.md
backend/agents/skills/quant-skill/: SKILL.md
backend/agents/skills/trading-skill/: SKILL.md
backend/agents/skills/web-fetch-skill/: SKILL.md
backend/api/: auth.py  schemas.py  user_context.py
backend/api/routes/: analysis_routes.py  auth_routes.py  chat_routes.py  document_routes.py  market_routes.py  portfolio_routes.py  scanning_routes.py  scheduler_routes.py  settings_routes.py  skill_routes.py  strategy_routes.py  watchlist_routes.py
backend/config/: settings.py
backend/db/: database.py  models.py  redis_client.py  seed.py
backend/env/: aws.env  local.env
backend/infra/: __init__.py  setup_agentcore.py
backend/services/: task_scheduler.py
frontend/: index.html  (+4 more)
(+48 files in other folders)
